--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Editorial by HTML5 UP</title>
+		<title>Privatpraxis für Psychotherapie</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,11 +36,14 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Editorial<br />
+											<h1>Willkommen<br />
 											by HTML5 UP</h1>
-											<p>A free and fully responsive site template</p>
+											<p>Privatpraxis für Psychotherapie - Kiel-Friedrichsort</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							
+										<p>Derzeit entsteht hier die Webpräsenz meiner Praxis für Psychotherapie.</p>
+										<p>Demnächst finden Sie hier nähere Informationen.</p>
+										<p>Für die Vereinbarung eines Erstgesprächstermins schreiben Sie mir gern eine Mail.</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
