--- a/index.html
+++ b/index.html
@@ -83,13 +83,53 @@
                     <!-- Impressum -->
                     <section id="impressum">
                         <header class="major"><h2>Impressum</h2></header>
-                        <p>Anbieter und inhaltlich Verantwortliche gemäß § 55 Abs. 2 RstV:<br/>
+                        <p></strong>Anbieter und inhaltlich Verantwortliche gemäß § 55 Abs. 2 RstV:</strong><br/>
                         M.Sc. Wiebke Markull<br/>
                         Privatpraxis für Psychotherapie<br/>
                         Fritz-Reuter-Str. 89, 24159 Kiel<br/>
                         E-Mail: kontakt@psychotherapie-markull.de<br/>
                         Webpräsenz: www.psychotherapie-markull.de</p>
-                        <p>Weitere Pflichtangaben, Aufsichtsbehörden und rechtliche Hinweise siehe vollständige Version im Originaltext.</p>
+                        <p><strong>Angaben gemäß § 5 DDG</strong><br>
+  Aufsichtsbehörde<br>
+  Landesamt für Soziale Dienste<br>
+  Dezernat Gesundheitsberufe<br>
+  Adolf-Westphal-Straße<br>
+  24143 Kiel</p>
+
+  <p><strong>Berufsbezeichnung</strong><br>
+  Psychologische Psychotherapeutin</p>
+
+  <p><strong>Zuständige Berufskammer</strong><br>
+  Psychotherapeutenkammer Schleswig-Holstein<br>
+  Sophienblatt 92-94<br>
+  24114 Kiel</p>
+
+  <p><strong>Zuständige Aufsichtsbehörde</strong><br>
+  Kassenärztliche Vereinigung Schleswig-Holstein<br>
+  Bismarckallee 1-6<br>
+  23795 Bad Segeberg</p>
+
+  <p><strong>Website-Design</strong><br>
+  Die Vorlage „Editorial“ wurde erstellt von 
+  <a href="https://html5up.net" target="_blank">HTML5 UP</a> 
+  und unterliegt der 
+  <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons Attribution 3.0 Lizenz (CC BY 3.0)</a>.
+  </p>
+
+  <h3>Haftungsausschluss</h3>
+
+  <p><strong>Haftung für Inhalte</strong><br>
+  Als Diensteanbieter bin ich gemäß § 7 Abs. 1 des Digitalen-Dienste-Gesetzes (DDG) für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach den §§ 8 bis 10 DDG bin ich als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.<br>
+  Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden entsprechender Rechtsverletzungen werde ich diese Inhalte umgehend entfernen.<br>
+  Alle auf dieser Website enthaltenen Informationen wurden mit größtmöglicher Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität übernehme ich jedoch keine Gewähr.</p>
+
+  <p><strong>Haftung für Links</strong><br>
+  Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.<br>
+  Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
+
+  <p><strong>Urheberrecht</strong><br>
+  Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.<br>
+  Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
                     </section>
 
                     <!-- Datenschutzerklärung -->
