--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <!-- Impressum -->
                     <section id="impressum">
                         <header class="major"><h2>Impressum</h2></header>
-                        <p></strong>Anbieter und inhaltlich Verantwortliche gemäß § 55 Abs. 2 RstV:</strong><br/>
+                     <p><strong>Anbieter und inhaltlich Verantwortliche gemäß § 55 Abs. 2 RstV:</strong><br/>
                         M.Sc. Wiebke Markull<br/>
                         Privatpraxis für Psychotherapie<br/>
                         Fritz-Reuter-Str. 89, 24159 Kiel<br/>
@@ -105,7 +105,7 @@
                       <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons Attribution 3.0 Lizenz (CC BY 3.0)</a>.
                       </p>
 
-                      <h3>Haftungsausschluss</h3>
+                      <p><strong>Haftungsausschluss</strong><br>
                     
                       <p><strong>Haftung für Inhalte</strong><br>
                       Als Diensteanbieter bin ich gemäß § 7 Abs. 1 des Digitalen-Dienste-Gesetzes (DDG) für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach den §§ 8 bis 10 DDG bin ich als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.<br>
