--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
                         
                           <p><strong>2. Verantwortliche Stelle</strong><br>
                           Verantwortlich für die Datenverarbeitung auf dieser Website:<br>
-                          WX<br>
+                          Wiebke Markull<br>
                           Psychologische Psychotherapeutin<br>
-                          Straße<br>
-                          Stadt<br>
-                          kontakt@psychotherapie.de</p>
+                          Fritz-Reuter-Straße 89<br>
+                          24159 Kiel<br>
+                          kontakt@psychotherapie-markull.de</p>
                         
                           <p><strong>3. Erhebung und Speicherung personenbezogener Daten sowie Art und Zweck von deren Verwendung</strong><br>
                           <em>a) Beim Besuch der Website</em><br>
