fertig bis auf menu symbol

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
                         <a href="#startseite" class="logo"><strong>Praxis für Psychotherapie</strong> Wiebke Markull</a>
                     </header> <br> <br>
 
-<span class="image main">
+<span class="image main welcome-photo">
     <img src="images/ostsee.jpg" alt="Ostsee">
 </span>
+
 
 
                     <!-- Startseite -->
@@ -69,13 +70,16 @@ Sollten Sie sich bereits in einer laufenden Psychotherapie befinden, ist in der 
 <hr class="section-divider">
 <br>
 
-    <h3><p class="notice"><strong>Gesunder Selbstwert - Online </strong></p></h3>
+<p style="background-color: rgb(167, 180, 182);">
+
+
+    <h3><p class="notice"style="background-color: lightblue;"><strong>Gesunder Selbstwert - Online </strong></p></h3>
 
 Zukünftig wird auch eine Gruppentherapie <i>Gesunder Selbstwert</i> komplett online stattfinden. Die Kosten hierfür werden in der Regel von den Beihilfen und von den privaten Krankenkassen übernommen (siehe oben).<br> <br> 
 
 Sowohl das Vorgespräch als auch die Gruppentherapie finden online über datenschutzkonforme Videosprechstunden zertifizierter Anbieter statt. Die Gruppe besteht als geschlossene Gruppe aus 5-8 Teilnehmenden, die die Gruppe gleichzeitig beginnen und beenden.
 
-<p class="notice"><strong>Donnerstags 9:00-10:40 (Vorgespräche ab sofort) – 12-15 Termine</strong></p>
+<p class="notice"style="background-color: lightblue;"><strong>Donnerstags 9:00-10:40 (Vorgespräche ab sofort) – 12-15 Termine</strong></p></p>
 
 
 
@@ -83,14 +87,14 @@ Sowohl das Vorgespräch als auch die Gruppentherapie finden online über datensc
 
 <hr class="section-divider">
 <br>
-                           <h3><p class="notice"><strong>Lösungen und Wege</strong></p></h3>
+                         <h3><p class="notice"style="background-color: rgb(204, 231, 224);"><strong>Lösungen und Wege </strong></p></p></h3>
 Wenn es uns nicht gut geht, schauen wir zuerst darauf, wo die Schwierigkeiten liegen, was nicht funktioniert, was uns ärgert oder hilflos macht. Dieser Fokus wird auch häufig in der Psychotherapie beibehalten, was zunächst zur Klärung hilfreich ist. Für eine Veränderung ist es jedoch mindestens genauso wichtig, auf die andere Seite zu schauen: Was ist gerade hilfreich? Was brauchen Sie zur Klärung eines ganz konkreten Problems? Welche Ressourcen und Stärken können sie aufbauen oder wiederentdecken? Worum soll es in Ihrem Leben gehen, wenn die aktuellen Schwierigkeiten nicht mehr so viel Raum einnehmen?<br><br>
 Die Gruppe legt den <b>Fokus auf Ressourcen- und Lösungsorientierung</b>. Wir nähern uns den Lösungen durch gemeinsamen Diskurs, Übungen und Erfahrungsaustausch. Sowohl allgemeine Themen als auch Einzelfallthemen haben in dieser Gruppe Platz.<br><br>
 
 Es handelt sich um eine halboffene Gruppe mit 4-7 Teilnehmenden. Vier mal im Jahr ist die Aufnahme in die Gruppe möglich. Die Anzahl der Termine richtet sich nach dem persönlichen Bedarf.<br><br>
 
 
-<p class="notice"><strong>Donnerstags 14:00-15:40 ab April (Vorgespräch ab sofort) – je nach Bedarf 12-24 Termine</strong></p> <br>
+<p class="notice"style="background-color: rgb(204, 231, 224);"><strong>Donnerstags 14:00-15:40 ab April (Vorgespräch ab sofort) – je nach Bedarf 12-24 Termine</strong></p></p> <br>
 
 Die Kosten für die Gruppentherapie werden in der Regel von den Beihilfen und von den privaten Krankenkassen übernommen. Bitte erkundigen Sie sich zuvor bei ihrer Beihilfe oder privaten Krankenkasse, welche Kosten sie für Vorgespräche (sogenannte Probatorische Sitzungen) und Gruppenpsychotherapie übernimmt.<br><br>
 Sollten Sie sich bereits in einer laufenden Psychotherapie befinden, ist in der Regel die Umwandlung von Einzeltherapiestunden in Gruppentherapiestunden möglich, sodass Sie zusätzlich zu Ihrer bestehenden Einzeltherapie auch an der Gruppentherapie teilnehmen können. Auch in diesem Fall ist es sinnvoll, sich zuvor über die Kostenübernahme sowie den Ablauf der Umwandlung zu informieren.
@@ -106,7 +110,7 @@ Sollten Sie sich bereits in einer laufenden Psychotherapie befinden, ist in der 
   <section id="kombinationsbehandlung">
                         <header class="major"><h3>Kombinationsbehandlung</h3></header>
                         <p>Die Kombinationsbehandlung vereint die Vorteile der Gruppen- und Einzeltherapie. Es erfolgen zunächst zwei bis fünf Einzelsitzungen, um Ihre Situation zu klären und den Therapiebedarf und Therapieplan zu ergründen. Danach finden ca. 15 Doppelstunden Gruppentherapie im wöchentlichen Rhythmus statt. Parallel dazu können bis zu 9 Stunden Einzeltherapie in Anspruch genommen werden (ca. ein bis zweimal im Monat).<br><br>
-Die Kombinationsbehandlung ist sowohl möglich, wenn Sie Gruppen- und Einzeltherapie bei derselben Therapeutin durchführen als auch wenn Ihre Einzeltherapie bereits bei einer anderen Therapeut:in stattfindet und Sie an der Gruppentherapie bei mir teilnehmen möchten.</p>
+                        Die Kombinationsbehandlung ist sowohl möglich, wenn Sie Gruppen- und Einzeltherapie bei derselben Therapeutin durchführen als auch wenn Ihre Einzeltherapie bereits bei einer anderen Therapeut:in stattfindet und Sie an der Gruppentherapie bei mir teilnehmen möchten.</p>
                     </section>
 
                     <section id="beratung">
@@ -121,19 +125,19 @@ Die Kombinationsbehandlung ist sowohl möglich, wenn Sie Gruppen- und Einzelther
 
 
                         <p><b>Krankenkasse und Beihilfe</b>  <br>
-Die Kosten für die ambulante Psychotherapie (Gruppe, Einzel, Kombinationsbehandlung) werden in der Regel von den privaten Krankenkassen sowie von den Beihilfen übernommen. Da sich die Verträge der Krankenkassen sehr unterscheiden, informieren Sie sich bitte vorab darüber, welche Kosten Ihnen erstattet werden und welche Unterlagen eingereicht werden müssen. Beim Antragsprozedere bin ich Ihnen gern behilflich.
-Die Kosten stelle ich Ihnen gemäß Gebührenordnung für Psychotherapeut:innen (GOP) in Rechnung. </p>
+                            Die Kosten für die ambulante Psychotherapie (Gruppe, Einzel, Kombinationsbehandlung) werden in der Regel von den privaten Krankenkassen sowie von den Beihilfen übernommen. Da sich die Verträge der Krankenkassen sehr unterscheiden, informieren Sie sich bitte vorab darüber, welche Kosten Ihnen erstattet werden und welche Unterlagen eingereicht werden müssen. Beim Antragsprozedere bin ich Ihnen gern behilflich.
+                            Die Kosten stelle ich Ihnen gemäß Gebührenordnung für Psychotherapeut:innen (GOP) in Rechnung. </p>
 
-<p> <b>Selbstzahlende</b>  <br> 
-     ist ebenso möglich, die Therapie oder Beratung selbst zu finanzieren. Diese Möglichkeit wird in der Regel von Menschen in Anspruch genommen, die noch keine Berufsunfähigkeitsversicherung abgeschlossen haben, auf eine Verbeamtung warten, aus anderen Gründen aktenkundige Diagnosen vermeiden möchten oder die Reglementierung durch den Kostenträger umgehen möchten. <br>
-Auch bei Selbstzahlenden richtet sich das Honorar nach der Gebührenordnung für Psychotherapeut:innen (GOP). Die Kosten für eine 50-minütige Einzelsitzung liegen danach je nach Aufwand zusätzlichen Leistungen zwischen 134,07 Euro und 186,54 Euro (entspricht dem 2,3- bis 3,5-fachen Satz der GOP, einschließlich Zusatzziffern). Um schwankende Kosten zu vermeiden und die Finanzierung planbar zu halten, berechne ich für jede 50-minütige Sitzung ein Honorar von 151,52 Euro (2,6-facher Satz ohne Zusatzziffern).  </p>
-    
- <p><b>Gesetzlich Versicherte </b><br> 
-Da ich aktuell über keinen Kassensitz verfüge, werden die Kosten von den gesetzlichen Krankenkassen nicht übernommen. Bitte wenden Sie sich an die Kolleg:innen mit Kassensitz.</p>
+                            <p> <b>Selbstzahlende</b>  <br> 
+                                ist ebenso möglich, die Therapie oder Beratung selbst zu finanzieren. Diese Möglichkeit wird in der Regel von Menschen in Anspruch genommen, die noch keine Berufsunfähigkeitsversicherung abgeschlossen haben, auf eine Verbeamtung warten, aus anderen Gründen aktenkundige Diagnosen vermeiden möchten oder die Reglementierung durch den Kostenträger umgehen möchten. <br>
+                            Auch bei Selbstzahlenden richtet sich das Honorar nach der Gebührenordnung für Psychotherapeut:innen (GOP). Die Kosten für eine 50-minütige Einzelsitzung liegen danach je nach Aufwand zusätzlichen Leistungen zwischen 134,07 Euro und 186,54 Euro (entspricht dem 2,3- bis 3,5-fachen Satz der GOP, einschließlich Zusatzziffern). Um schwankende Kosten zu vermeiden und die Finanzierung planbar zu halten, berechne ich für jede 50-minütige Sitzung ein Honorar von 151,52 Euro (2,6-facher Satz ohne Zusatzziffern).  </p>
+                                
+                            <p><b>Gesetzlich Versicherte </b><br> 
+                            Da ich aktuell über keinen Kassensitz verfüge, werden die Kosten von den gesetzlichen Krankenkassen nicht übernommen. Bitte wenden Sie sich an die Kolleg:innen mit Kassensitz.</p>
 
 
-<p> <b>Kosten für Beratung</b> <br> 
-Psychologische Beratung ist eine Selbstzahlenden-Leistung. Das Honorar orientiert sich an der GOP und beläuft sich auf 150 Euro pro 50-minütige Sitzung. </p>
+                            <p> <b>Kosten für Beratung</b> <br> 
+                            Psychologische Beratung ist eine Selbstzahlenden-Leistung. Das Honorar orientiert sich an der GOP und beläuft sich auf 150 Euro pro 50-minütige Sitzung. </p>
 
 </p> 
 
