hamburger menü gefixt, copyright drin

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="https://html5up.net/uploads/demos/editorial/assets/css/main.css" />
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-dYzlPZLwSgxP/..." crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="custom.css" />
     </head>
     <body class="is-preload">
@@ -29,7 +30,7 @@
                         <header class="major">
                             <h2>Willkommen</h2>
                         </header>
-                        <p>Herzlich Willkommen in meiner Privatpraxis für Psychotherapie im Kieler Norden. Als psychologische Psychotherapeutin biete ich in meiner Praxis Psychotherapie als Gruppentherapie und Einzeltherapie sowie psychologische Beratung an. Meine therapeutischen Schwerpunkte liegen in den Bereichen Selbstwert, Lebenskrisen und Traumatherapie.</p>
+                        <p>Herzlich Willkommen in meiner Privatpraxis für Psychotherapie im Kieler Norden. Als psychologische Psychotherapeutin biete ich Psychotherapie als Gruppentherapie und Einzeltherapie sowie psychologische Beratung an. Meine therapeutischen Schwerpunkte liegen in den Bereichen Selbstwert, Lebenskrisen und Traumatherapie.</p>
                         <p><strong>Aktuell gibt es freie Plätze für Gruppentherapie, Kombinationsbehandlung und psychologische Beratung. <br><br>Für Einzelpsychotherapien habe ich derzeit leider keine freien Kapazitäten.</strong></p> <br>
                         <a href="mailto:kontakt@psychotherapie-markull.de" class="button-primary">kontakt@psychotherapie-markull.de</a>
                     </section>
@@ -312,7 +313,7 @@ Sollten Sie sich bereits in einer laufenden Psychotherapie befinden, ist in der 
 
             <!-- Sidebar -->
             <div id="sidebar">
-                   <a href="#sidebar" class="toggle"><span></span></a>
+            
                 <div class="inner">
                     <nav id="menu">
                         <header class="major"><h2>Menü</h2></header>
@@ -345,10 +346,11 @@ Sollten Sie sich bereits in einer laufenden Psychotherapie befinden, ist in der 
             <!-- Footer-Link links unten -->
             <ul class="sidebar-footer">
 
- <!--<li class="sidebar-footer-text">M.Sc. Wiebke Markull <br> Praxis für Psychotherapie <br> Fritz-Reuter-Str. 89 <br> 24159 Kiel <br> kontakt@psychotherapie-markull.de</li>
---> 
+
                 <li><a href="#impressum">Impressum</a></li>
                      <li><a href="#datenschutz">Datenschutz</a></li>
+<!-- <li>class="sidebar-footer-text"-->
+    <li style="font-size: 0.7rem;">©2026 Praxis für Psychotherapie Wiebke Markull. Alle Rechte vorbehalten.</li></ul>
             </ul>
                     </nav>
                 </div>
