barrierefreiheit klausel eingefügt

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
         <link rel="stylesheet" href="https://html5up.net/uploads/demos/editorial/assets/css/main.css" />
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-dYzlPZLwSgxP/..." crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="custom.css" />
+
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
+
+
     </head>
     <body class="is-preload">
         <div id="wrapper">
@@ -303,6 +309,22 @@ Sollten Sie sich bereits in einer laufenden Psychotherapie befinden, ist in der 
                           Ich behalte mir vor, diese Datenschutzerklärung gelegentlich anzupassen, um sie an geänderte rechtliche Anforderungen anzupassen oder Änderungen meiner Leistungen umzusetzen.<br>
                           Bitte informieren Sie sich bei jedem Besuch meiner Website über die geltende Datenschutzerklärung. Die jeweils aktuelle Version ist auf der Website veröffentlicht und gilt für Ihren erneuten Besuch.</p>
                         </section>
+
+                          <section id="barrierefreiheit">
+                        <header class="major"><h2>Barrierefreiheit</h2></header>
+                     <p>
+    Ich bin bemüht, diese Website so barrierefrei wie möglich zu gestalten und orientiere mich dabei an den <strong>Richtlinien der WCAG 2.1</strong>.
+  </p>
+  <p>
+    Die Website befindet sich aktuell in einem <strong>fortlaufenden Verbesserungsprozess</strong>, um die Zugänglichkeit für alle Nutzer:innen zu erhöhen.
+  </p>
+  <p>
+    Sollten Ihnen Barrieren auffallen oder Sie Schwierigkeiten bei der Nutzung unserer Website haben, <strong>kontaktieren Sie mich bitte unter</strong>:
+    <a href="mailto: kontakt@psychotherapie-markull.de">kontakt@psychotherapie-markull.de</a>
+  </p>
+  <p>
+    <em>Letzte Überprüfung: 10.02.2026</em>
+  </p>
                     </section>
 
                 </div>
@@ -349,6 +371,7 @@ Sollten Sie sich bereits in einer laufenden Psychotherapie befinden, ist in der 
 
                 <li><a href="#impressum">Impressum</a></li>
                      <li><a href="#datenschutz">Datenschutz</a></li>
+                        <li><a href="#barrierefreiheit">Barrierefreiheit</a></li>
 <!-- <li>class="sidebar-footer-text"-->
     <li style="font-size: 0.7rem;">©2026 Praxis für Psychotherapie Wiebke Markull. Alle Rechte vorbehalten.</li></ul>
             </ul>
