--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 
+<!-- Privacy-friendly analytics by Plausible -->
+<script async src="https://plausible.io/js/pa-Lf5WAGVIJ53vSqrMhxEzs.js"></script>
+<script>
+  window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+  plausible.init()
+</script>
+
+<script>
+// Warten, bis die Seite geladen ist
+document.addEventListener('DOMContentLoaded', function() {
+    // Alle Links im Hauptmenü auswählen
+    // Passe '.main-menu a' an den CSS-Selektor deines Menüs an
+    var menuLinks = document.querySelectorAll('.main-menu a');
+
+    menuLinks.forEach(function(link) {
+        link.addEventListener('click', function() {
+            // Event-Name: Menü-Klick + Link-Text
+            var eventName = 'Menü-Klick: ' + link.textContent.trim();
+            plausible(eventName);
+        });
+    });
+});
+</script>
+
 
     </head>
     <body class="is-preload">
