test rückgängig gemacht

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ document.addEventListener('DOMContentLoaded', function() {
     Ich bin bemüht, diese Website so barrierefrei wie möglich zu gestalten und orientiere mich dabei an den <strong>Richtlinien der WCAG 2.1</strong>.
   </p>
   <p>
-    Die Website befindet sich aktuell in einem <strong>fortlaufenden Verbesserungsprozess</strong>, um die Zugänglichkeiten für alle Nutzer:innen zu erhöhen.
+    Die Website befindet sich aktuell in einem <strong>fortlaufenden Verbesserungsprozess</strong>, um die Zugänglichkeit für alle Nutzer:innen zu erhöhen.
   </p>
   <p>
     Sollten Ihnen Barrieren auffallen oder Sie Schwierigkeiten bei der Nutzung meiner Website haben, <strong>kontaktieren Sie mich bitte unter</strong>:
